// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateFormComponent > all field types > generates form for all field types 1`] = `
"<!--
  @crouton-generated
  @collection products
  @layer shop
  @generated 2025-01-01

  ## AI Context
  - Form component for products collection
  - Handles: create, update, delete actions
  - API endpoint: /api/teams/[id]/shop-products
  - Zod schema: useShopProducts() composable
  - Fields: title, content, count, price, enabled, publishedAt, metadata, items, tags

  ## Common Modifications
  - Add field: Add UFormField in template, update schema in composable
  - Custom validation: Modify schema in composable
  - Custom field component: Use meta.component in schema JSON
  - Change layout: Modify CroutonFormLayout template slots

  Generated by @fyit/crouton-cli
  Safe to modify - regeneration requires --force flag
-->

<template>
  <CroutonFormActionButton
    v-if="action === 'delete'"
    :action="action"
    :collection="collection"
    :items="items"
    :loading="loading"
    @click="handleSubmit"
  />

  <UForm
    v-else
    :schema="schema"
    :state="state"
    @submit="handleSubmit"
  >
    <CroutonFormLayout>
      <template #main>
      <div class="flex flex-col gap-4 p-1">
        <UFormField label="Title" name="title" class="not-last:pb-4">
          <UInput v-model="state.title" class="w-full" size="xl" />
        </UFormField>
        <UFormField label="Content" name="content" class="not-last:pb-4">
          <UTextarea v-model="state.content" class="w-full" size="xl" />
        </UFormField>
        <UFormField label="Count" name="count" class="not-last:pb-4">
          <UInputNumber v-model="state.count" class="w-full" />
        </UFormField>
        <UFormField label="Price" name="price" class="not-last:pb-4">
          <UInputNumber v-model="state.price" class="w-full" />
        </UFormField>
        <UFormField label="Enabled" name="enabled" class="not-last:pb-4">
          <UCheckbox v-model="state.enabled" />
        </UFormField>
        <UFormField label="PublishedAt" name="publishedAt" class="not-last:pb-4">
          <CroutonCalendar v-model:date="state.publishedAt" />
        </UFormField>
        <UFormField label="Metadata" name="metadata" class="not-last:pb-4">
          <UTextarea
            :model-value="typeof state.metadata === 'string' ? state.metadata : JSON.stringify(state.metadata, null, 2)"
            @update:model-value="(val) => { try { state.metadata = val ? JSON.parse(val) : {} } catch (e) { console.error('Invalid JSON:', e) } }"
            class="w-full font-mono text-sm"
            :rows="8"
            placeholder="Enter JSON object"
          />
        </UFormField>
        <UFormField label="Items" name="items" class="not-last:pb-4">
          <CroutonFormRepeater
            v-model="state.items"
            component-name="ShopProductsItemInput"
            add-label="Add Item"
            :sortable="true"
          />
        </UFormField>
        <UFormField label="Tags" name="tags" class="not-last:pb-4">
          <UTextarea
            :model-value="Array.isArray(state.tags) ? state.tags.join('\\n') : ''"
            @update:model-value="(val) => state.tags = val ? val.split('\\n').filter(Boolean) : []"
            class="w-full"
            :rows="6"
            placeholder="Enter one value per line"
          />
          <p class="text-sm text-gray-500 mt-1">Enter one value per line</p>
        </UFormField>
      </div>
      </template>

      <template #footer>
        <CroutonFormActionButton
          :action="action"
          :collection="collection"
          :items="items"
          :loading="loading"
        />
      </template>
    </CroutonFormLayout>
  </UForm>
</template>

<script setup lang="ts">
import type { ShopProductFormProps, ShopProductFormData } from '../../types'
import useShopProducts from '../composables/useShopProducts'

const props = defineProps<ShopProductFormProps>()
const { defaultValue, schema, collection } = useShopProducts()

// Form layout configuration
const tabs = ref(false)



// Use new mutation composable for data operations
const { create, update, deleteItems } = useCollectionMutation(collection)

// useCrouton still manages modal state
const { close, loading } = useCrouton()

// Initialize form state with proper values (no watch needed!)
const initialValues = props.action === 'update' && props.activeItem?.id
  ? { ...defaultValue, ...props.activeItem }
  : { ...defaultValue }

// Convert date strings to Date objects for date fields during editing
if (props.action === 'update' && props.activeItem?.id) {
  if (initialValues.publishedAt) {
    initialValues.publishedAt = new Date(initialValues.publishedAt)
  }
}

const state = ref<ShopProductFormData & { id?: string | null }>(initialValues)

const handleSubmit = async () => {
  try {
    // Serialize Date objects to ISO strings for API submission
    const serializedData = { ...state.value }
    if (serializedData.publishedAt instanceof Date) {
      serializedData.publishedAt = serializedData.publishedAt.toISOString()
    }

    if (props.action === 'create') {
      await create(serializedData)
    } else if (props.action === 'update' && state.value.id) {
      await update(state.value.id, serializedData)
    } else if (props.action === 'delete') {
      await deleteItems(props.items)
    }

    close()

  } catch (error) {
    console.error('Form submission failed:', error)
    // You can add toast notification here if available
    // toast.add({ title: 'Error', description: 'Failed to submit form', color: 'red' })
  }
}
</script>"
`;

exports[`generateFormComponent > generates correct output for basic collection 1`] = `
"<!--
  @crouton-generated
  @collection products
  @layer shop
  @generated 2025-01-01

  ## AI Context
  - Form component for products collection
  - Handles: create, update, delete actions
  - API endpoint: /api/teams/[id]/shop-products
  - Zod schema: useShopProducts() composable
  - Fields: name, description, price, active

  ## Common Modifications
  - Add field: Add UFormField in template, update schema in composable
  - Custom validation: Modify schema in composable
  - Custom field component: Use meta.component in schema JSON
  - Change layout: Modify CroutonFormLayout template slots

  Generated by @fyit/crouton-cli
  Safe to modify - regeneration requires --force flag
-->

<template>
  <CroutonFormActionButton
    v-if="action === 'delete'"
    :action="action"
    :collection="collection"
    :items="items"
    :loading="loading"
    @click="handleSubmit"
  />

  <UForm
    v-else
    :schema="schema"
    :state="state"
    @submit="handleSubmit"
  >
    <CroutonFormLayout>
      <template #main>
      <div class="flex flex-col gap-4 p-1">
        <UFormField label="Name" name="name" class="not-last:pb-4">
          <UInput v-model="state.name" class="w-full" size="xl" />
        </UFormField>
        <UFormField label="Description" name="description" class="not-last:pb-4">
          <UTextarea v-model="state.description" class="w-full" size="xl" />
        </UFormField>
        <UFormField label="Price" name="price" class="not-last:pb-4">
          <UInputNumber v-model="state.price" class="w-full" />
        </UFormField>
        <UFormField label="Active" name="active" class="not-last:pb-4">
          <UCheckbox v-model="state.active" />
        </UFormField>
      </div>
      </template>

      <template #footer>
        <CroutonFormActionButton
          :action="action"
          :collection="collection"
          :items="items"
          :loading="loading"
        />
      </template>
    </CroutonFormLayout>
  </UForm>
</template>

<script setup lang="ts">
import type { ShopProductFormProps, ShopProductFormData } from '../../types'
import useShopProducts from '../composables/useShopProducts'

const props = defineProps<ShopProductFormProps>()
const { defaultValue, schema, collection } = useShopProducts()

// Form layout configuration
const tabs = ref(false)



// Use new mutation composable for data operations
const { create, update, deleteItems } = useCollectionMutation(collection)

// useCrouton still manages modal state
const { close, loading } = useCrouton()

// Initialize form state with proper values (no watch needed!)
const initialValues = props.action === 'update' && props.activeItem?.id
  ? { ...defaultValue, ...props.activeItem }
  : { ...defaultValue }

const state = ref<ShopProductFormData & { id?: string | null }>(initialValues)

const handleSubmit = async () => {
  try {
    if (props.action === 'create') {
      await create(state.value)
    } else if (props.action === 'update' && state.value.id) {
      await update(state.value.id, state.value)
    } else if (props.action === 'delete') {
      await deleteItems(props.items)
    }

    close()

  } catch (error) {
    console.error('Form submission failed:', error)
    // You can add toast notification here if available
    // toast.add({ title: 'Error', description: 'Failed to submit form', color: 'red' })
  }
}
</script>"
`;
